fixed alignment issues, fixed blue underline, changed font and made the projects page better

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 	width: 100%;
 	background-position: center;
 	background-size: cover;
-	padding-left: 5%;
+	padding-left: 7%;
 	padding-right: 5%;
 	box-sizing: border-box;
 	position: relative;
@@ -202,13 +202,24 @@ span{
 }
 .cardcontainer .card .content .contentBx span{
 	color: #fff;
-	margin-left: 33%;
 	text-decoration: none;
 	letter-spacing: 2px;
 	font-weight: 500;
 	font-family: sans-serif;
 	text-align: center;
 	font-size: 20px;
+	font-weight: 300;
+	text-transform: initial;
+
+}
+.cardcontainer .card .content .contentBx a{
+	color: #fff;
+	text-decoration: none;
+	letter-spacing: 2px;
+	font-weight: 500;
+	font-family: sans-serif;
+	align-items: center;
+	font-size: 18px;
 	font-weight: 300;
 	text-transform: initial;
 
